WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240939
fix sense of the display list AsTextFlags
https://bugs.webkit.org/show_bug.cgi?id=240939
Summary
fix sense of the display list AsTextFlags
Cameron McCormack (:heycam)
Reported
2022-05-25 19:59:42 PDT
They do the opposite of what their names suggest.
Attachments
Add attachment
proposed patch, testcase, etc.
Cameron McCormack (:heycam)
Comment 1
2022-05-25 20:12:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1038
EWS
Comment 2
2022-05-27 20:37:58 PDT
Committed
r294981
(
251085@main
): <
https://commits.webkit.org/251085@main
> Reviewed commits have been landed. Closing PR #1038 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-05-27 20:38:14 PDT
<
rdar://problem/94065600
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug