Fix sense of the display list AsTextFlags https://bugs.webkit.org/show_bug.cgi?id=240939

Reviewed by Simon Fraser.

They do the opposite of what their names suggest.

* Source/WebCore/platform/graphics/displaylists/DisplayList.cpp:
(WebCore::DisplayList::DisplayList::shouldDumpForFlags):
(WebCore::DisplayList::DisplayList::dump const):
* Source/WebCore/platform/graphics/displaylists/DisplayListItemType.h:
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.cpp:
(WebCore::DisplayList::dumpItem):
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.h:
(WebCore::DisplayList::operator<<):
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::displayListForElement):
(WebCore::Internals::replayDisplayListForElement):
(WebCore::Internals::cachedGlyphDisplayListsForTextNode):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:

Canonical link: https://commits.webkit.org/251085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294981 268f45cc-cd09-0410-ab3c-d52691b4dbfc