Source/WebCore/platform/graphics/displaylists/DisplayListItemType.h
@@ -29,9 +29,8 @@ namespace WebCore {
 namespace DisplayList {
 
 enum class AsTextFlag : uint8_t {
-    IncludesPlatformOperations      = 1 << 0,
-    IncludesResourceIdentifiers     = 1 << 1,
-    DecomposesDrawGlyphs            = 1 << 2,
+    IncludePlatformOperations      = 1 << 0,
+    IncludeResourceIdentifiers     = 1 << 1,
 };
 
 enum class ItemType : uint8_t {
